--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.31.0",
     "dotenv>=0.9.9",
     "fastapi-users[sqlalchemy]>=15.0.3",
     "matplotlib>=3.10.8",
     "streamlit>=1.53.0",
-    "syncpg>=1.1.3",
     "uvicorn[standard]>=0.40.0",
 ]
 
