--- a/.github/workflows/pinger.yml
+++ b/.github/workflows/pinger.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Ping the website
         # Use curl to send a GET request to the specified URL
-        run: curl -I https://graph-creator-rpry.onrender.com
+        run: curl https://graph-creator-rpry.onrender.com
